@@ -1,3 +1,8 @@
+2002-03-28  Martin Weber <martweb@gmx.net>
+
+	* despeckle.c: despeckle now also works on gray
+	scale images.
+
 2002-03-20  Martin Weber <martweb@gmx.net>
 
 	* main.c (main): Moved dumping of the bitmap so that quantize 
